--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <center>
-<hl>
-Script World!
-  //Murder Mystery Script
+<h1>
+Script World
+//Murder Mystery Script
 //loadstring(game:HttpGet("https://raw.githubusercontent.com/Doggo-cryto/EclipseMM2/master/Script", true))()
-  //A Universal Time Script
+//Murder A Universal Time
 //loadstring(game:HttpGet("https://raw.githubusercontent.com/Yaki-0/Yaki-s-Hub/main/AUT.lua", true))()
 </h1>
 </center>
